--- a/reports/report-styles.css
+++ b/reports/report-styles.css
@@ -1,5 +1,6 @@
 body {
   counter-reset: figure-count;
+  counter-reset: table-count;
 }
 
 .title-page {
@@ -43,5 +44,30 @@ img {
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+/* #endregion */
+
+/* #region table styles */
+table {
+  border-collapse: collapse;
+  counter-increment: table-count;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #eee;
+}
+
+td, th {
+  border: 0.1em solid black;
+  padding: 0.3em;
+}
+
+caption {
+  text-align: left;
+}
+
+caption::before {
+  content: "Table " counter(table-count) ": ";
+  font-weight: bold;
 }
 /* #endregion */
