--- a/reports/rendering/general-report-styles.css
+++ b/reports/rendering/general-report-styles.css
@@ -65,20 +65,24 @@ table {
   border-collapse: collapse;
   counter-increment: table-count;
   margin-bottom: 2em;
+  margin-left: auto;
+  margin-right: auto;
+  border-bottom: 1pt solid black;
   break-inside: avoid;
 }
 
-tbody tr:nth-child(odd) {
-  background-color: #eee;
+thead tr {
+  border-bottom: 1pt solid black;
+  border-top: 1pt solid black;
 }
 
 td, th {
-  border: 0.1em solid black;
-  padding: 0.3em;
+  padding: 0.3em 0.8em;
+  text-align: center;
 }
 
 caption {
-  text-align: left;
+  text-align: center;
 }
 
 caption::before {
