--- a/reports/rendering/general-report-styles.css
+++ b/reports/rendering/general-report-styles.css
@@ -44,8 +44,14 @@ h2 {
 figure {
   break-inside: avoid;
   margin: 0;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   counter-increment: figure-count;
+}
+
+figcaption {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 figcaption::before {
@@ -54,9 +60,10 @@ figcaption::before {
 }
 
 img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
+  width: 80%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 /* #endregion */
 
